# wtr

./: Cargo.toml
src/: args.rs  io.rs  main.rs  types.rs  ui.rs  weather_report.rs
src/weather_report/: datetime_format.rs  io.rs  parameter.rs
