[package]
name = "wtr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["unstable-locales"] }
reqwest = "0.11.16"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1", features = ["full"] }
strum = "0.24"
strum_macros = "0.24"
prettytable-rs = "0.10.0"
enum-iterator = "1.4.0"
clap = { version = "4.2.4", features = ["derive"] }
